# star-asn

./: .dockerignore  .flake8  .gitignore  DOCKER_COMPOSE_WATCH_GUIDE.md  Dockerfile  QUICK_START_DEV.md  README.md  SETUP_COMPLETE.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.traefik.yml  docker-compose.yml  main.py  mypy.ini  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci-cd.yml  validate-devcontainer.yml
api/: main.py  scheduler.py
monitoring/: alert_rules.yml  loki-config.yml  prometheus-advanced.yml  prometheus.yml
scripts/: automated_setup.sh  backup_to_s3.sh  dev-setup.bat  dev-setup.sh
star_attendance/: __init__.py  allowance_handler.py  bootstrap_db.py  core_worker.py  database_manager.py  internal_api.py  login_handler.py  notifier.py  queueing.py  runtime.py  service_runner.py  sso_handler.py  telegram_bot.py  worker_pg.py
star_attendance/bot/: cleanup.py  constants.py  conversation_admin.py  conversation_broadcast.py  conversation_manual.py  conversation_registration.py  conversation_settings.py  conversation_shared.py  conversations.py  handler_callbacks.py  handler_commands.py  handler_views.py  handlers.py  telemetry.py  ui.py
star_attendance/core/: config.py  engine.py  exceptions.py  geo.py  logging_config.py  options.py  processor.py  resilience.py  rules.py  security.py  timeutils.py  tracing.py  utils.py
star_attendance/db/: bootstrap.py  enums.py  manager.py  models.py  types.py
star_attendance/db/repositories/: __init__.py  allowance_repo.py  audit_repo.py  bot_message_repo.py  session_repo.py  settings_repo.py  user_repo.py
supabase/migrations/: 20260417100000_init_schema.sql  20260418110000_enterprise_finalize.sql  20260418120000_rls_internal_tables.sql  20260418130000_telegram_only_runtime.sql  20260419100000_cleanup_attendance_rules.sql  20260419110000_expand_enums_v2.sql  20260419120000_optimize_enums_v2.sql  20260419130000_scheduler_defaults_and_workdays.sql  20260419140000_cleanup_upt_columns.sql  20260419150000_realtime_sync_triggers.sql  20260419160000_performance_optimization.sql  20260419170000_recover_other_actions.sql  20260419180000_update_default_location.sql
tools/: activate_miniapp.py  consolidate_rls.py  debug_scheduler.py  direct_pg_sql.py  direct_sql.py  fix_admin_rls.py  fix_rls.py  init_supabase.py  manual_login.py  sys_tools.py  test_notif.py  verify_enterprise.py  verify_logs.py
web/: .env.example  Dockerfile  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  vite-env.d.ts
web/src/components/charts/: ActivityHeatmap.tsx
web/src/components/dashboard/: AdminDashboard.tsx  UserDashboard.tsx
web/src/components/layout/: AuthError.tsx  AuthLoading.tsx  BottomNav.tsx
web/src/components/ui/: button.tsx
web/src/lib/: supabase.ts
web/src/types/: system.ts  user.ts
